Revert "Dark mode Fixes"
This reverts commit 173490dd53e73f82de17d82206f5c145a07af05e.

--- a/src/components/SmalCompents/DropDown.css
+++ b/src/components/SmalCompents/DropDown.css
@@ -1,6 +1,3 @@
-:root{
-  --dropdown-textcolor: #41526E;
-}
 #Housing {
   position: relative;
   display: flex;
@@ -23,7 +20,7 @@
 
 .dropbtn1 {
   background-color: #ffffff;
-  color: var(--dropdown-textcolor) !important;
+  color: #41526E !important;
   padding: 16px;
   width: 350px; /* Corrected width to use pixels */
   font-size: 16px;
@@ -38,7 +35,7 @@
 
 .Arrowbox {
   background-color: #ffffff;
-  color: var(--dropdown-textcolor) !important;
+  color: #41526E !important;
   padding: 16px;
   font-size: 16px;
   border: none;
